Update fetch.js file untuk contoh tambahan

--- a/00-tfjs-dasar/index.html
+++ b/00-tfjs-dasar/index.html
@@ -7,8 +7,11 @@
     <title>TensorFlow.Js - Basic</title>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script src="papaparse.min.js"></script>
     <script src="script.js"></script>
+    <script src="operations.js"></script>
+    <script src="loaddata.js"></script>    
+    <script src="fetch.js"></script>
 </body>
 </html>
